DOCSP-40021 removing search from  examples (#7900)
* DOCSP-40021 removing search from  examples

* DOCSP-40021 removing search from  examples

* DOCSP-40021 removing search from  examples

* DOCSP-40021 Melissa comments

* DOCSP-40021 reducing mentions of query

* DOCSP-40021 removing instances of query

* DOCSP-40021 removing instances of query

--- a/source/includes/extracts-4.4-changes.yaml
+++ b/source/includes/extracts-4.4-changes.yaml
@@ -150,7 +150,7 @@ content: |
            { $text: { $search: "cake" } } 
         ).sort( { score: { $meta: "textScore" } } )
 
-     As a result, you can sort the resulting documents by their search
+     As a result, you can sort the resulting documents by their
      relevance without projecting the ``textScore``.
 
    - If you include the :expression:`{ $meta: "textScore" } <$meta>` expression 
