DOCSP-40182 DeYAML RHEL Installation (#7941)
* DOCSP-40182 DeYAML RHEL Installation Docs

* Adds RHEL procedure include

* Test double tabs

* Fixes build issue

* Fixes build issue

* Fixes build issue

* Fixes build issue

* Fixes build issue

* Adds repo conf step

* Adds repo conf step

* Adds install step

* Fixes build issue

* Removes YAML for community

* Fixes build issue

* Fixes build issue

* Enterprise setup

* Enterprise setup

* Fixes build issue

* removes YAML

* Fixes build issue

* Literal include test

* Literal include test

* Fixes build issue

* Fixes build issue

* Fixes build issue

* Fixes build issue

* Fixes per Matt

--- a/source/includes/steps-install-mongodb-enterprise-on-amazon.yaml
+++ b/source/includes/steps-install-mongodb-enterprise-on-amazon.yaml
@@ -32,6 +32,7 @@ content: |
 ---
 stepnum: 2
 level: 4
-source:
-  file: steps-install-mongodb-enterprise-on-red-hat.yaml
-  ref: install
+ref: install
+content: |
+  .. include:: /includes/deploy/ent-rhel-install
+
