--- a/source/includes/steps-install-mongodb-on-amazon.yaml
+++ b/source/includes/steps-install-mongodb-on-amazon.yaml
@@ -27,7 +27,7 @@ content: |
 ---
 stepnum: 2
 level: 4
-source:
-  file: steps-install-mongodb-on-red-hat.yaml
-  ref: install
+ref: install
+content: |
+  .. include:: /includes/deploy/com-rhel-install
 ...
