DOCSP-36588-feature-branch-and-stubs (#6331)
* DOCSP-37576-removeQuerySettings-page

* DOCSP-37576-removeQuerySettings-page

* DOCSP-37576-removeQuerySettings-page

* DOCSP-37576-removeQuerySettings-page

* DOCSP-37576-removeQuerySettings-page

* DOCSP-37576-removeQuerySettings-page

* DOCSP-37576-removeQuerySettings-page

* DOCSP-37576-removeQuerySettings-page

* DOCSP-37576-removeQuerySettings-page

* DOCSP-37576-removeQuerySettings-page

* DOCSP-37576-removeQuerySettings-page

* DOCSP-37576-removeQuerySettings-page

* Trigger Build

* DOCSP-37576-removeQuerySettings-page

* DOCSP-37868-update-query-pages

* DOCSP-37868-update-query-pages

* DOCSP-37868-update-query-pages

* DOCSP-37868-update-query-pages

* DOCSP-37868-update-query-pages

* DOCSP-37868-update-query-pages

* DOCSP-37868-update-query-pages

* DOCSP-37868-update-query-pages

* DOCSP-37868-update-query-pages

* DOCSP-37868-update-query-pages

* DOCSP-37868-update-query-pages

* Trigger Build

* DOCSP-37868-update-query-pages

* DOCSP-37868-update-query-pages

* DOCSP-37868-update-query-pages

* DOCSP-38450-permissions-and-role

* DOCSP-38450-permissions-and-role

* DOCSP-38450-permissions-and-role

* DOCSP-38450-permissions-and-role

* DOCSP-38450-permissions-and-role

* DOCSP-38450-permissions-and-role

* DOCSP-38450-permissions-and-role

* DOCSP-38450-permissions-and-role

* Trigger Build

* DOCSP-37454-querySettings-stage-page

* DOCSP-37454-querySettings-stage-page

* DOCSP-37454-querySettings-stage-page

* DOCSP-37454-querySettings-stage-page

* DOCSP-37454-querySettings-stage-page

* DOCSP-37454-querySettings-stage-page

* DOCSP-37454-querySettings-stage-page

* DOCSP-37454-querySettings-stage-page

* DOCSP-37454-querySettings-stage-page

* DOCSP-37454-querySettings-stage-page

* DOCSP-37454-querySettings-stage-page

* DOCSP-37454-querySettings-stage-page

* DOCSP-37454-querySettings-stage-page


--- a/snooty.toml
+++ b/snooty.toml
@@ -177,6 +177,7 @@ toc_landing_pages = [
    "/reference/mongodb-wire-protocol/",
    "/reference/operator/aggregation-pipeline",
    "/reference/operator/aggregation",
+   "/reference/operator/aggregation/querySettings",
    "/reference/operator/aggregation/queryStats",
    "/reference/operator/query-array",
    "/reference/operator/query-bitwise",
