--- a/source/includes/extracts-agg-stages.yaml
+++ b/source/includes/extracts-agg-stages.yaml
@@ -159,6 +159,13 @@ content: |
           
           See also :pipeline:`$unset` for removing existing fields.
 
+      * - :pipeline:`$querySettings`
+
+        - Returns query settings previously added with
+          :dbcommand:`setQuerySettings`.
+
+          .. versionadded:: 8.0
+
       * - :pipeline:`$queryStats`
 
         - .. include:: /includes/aggregation/queryStats/description.rst
