--- a/source/includes/extracts-built-in-roles.yaml
+++ b/source/includes/extracts-built-in-roles.yaml
@@ -55,7 +55,8 @@ content: |
   Provides management and monitoring actions on the cluster. A
   user with this role can access the ``config`` and ``local``
   databases, which are used in sharding and replication,
-  respectively.
+  respectively. Additionally, the role provides the
+  :authaction:`querySettings` action.
 ---
 ref: built-in-roles-clusterMonitor
 content: |
