DOCSP-40576 Transaction Count (#8033)

--- a/source/includes/extracts-transactions.yaml
+++ b/source/includes/extracts-transactions.yaml
@@ -355,7 +355,7 @@ content: |
    MongoDB drivers provide a collection-level API
    ``countDocuments(filter, options)`` as a helper method that uses the
    :pipeline:`$group` with a :group:`$sum` expression
-   to perform a count. The ``count()`` API is deprecated.
+   to perform a count. 
 
    :binary:`~bin.mongosh` provides the
    :method:`db.collection.countDocuments()` helper method that uses the
