DOCSP-40659: 7.0.12 release note updates (#8054)
* DOCSP-40659: 7.0.12 release note updates

* DOCSP-40659: Fixed two issues

* DOCSP-40659: Typo

* DOCSP-40659: Remove extra lines

--- a/config/changelog_conf.yaml
+++ b/config/changelog_conf.yaml
@@ -37,6 +37,8 @@ groups:
     - dhandles
     - RTS
     - Reconciliation
+    - Statistics
+    - Not Applicable
   "MMAP":
     - MMAPv1
   "Storage":
