DOCSP 38011 reducing internal links to $text (#8071)
* DOCSP-38011 reduce internal links to

* DOCSP-38011 reduce internal links to

* DOCSP-38011 adding mentions of atlas search

* DOCSP-38011 adding mentions of atlas search

* DOCSP-38011 adding mentions of atlas search

* DOCSP-38011 adding mentions of atlas search

* DOCSP-38011 *

* DOCSP-38011 copy edit

--- a/source/includes/extracts-4.4-changes.yaml
+++ b/source/includes/extracts-4.4-changes.yaml
@@ -191,7 +191,7 @@ content: |
       ).sort( { score: {  $meta: "textScore" } } );
    
 
-   If you do not specify the :query:`$text` operator in the query
+   If you do not specify the ``$text`` operator in the query
    predicate, the operation fails. For example, the following operations are
    invalid starting in MongoDB 4.4:
 
