DOCSP-33639 OCSF Schema Audit Logs (#8129)
* (DOCSP-40059): auditLog.schema option (#7974)

* (DOCSP-40059): auditLog.schema option

* add option for mongod/mongos pages

* update config mapping page

* edit

* fix mongos page typo

* another fix for mongos page

* use replacement for options

* DOCSP-40060 Update audit message docs for OCSF logs (#8025)

* WIP

* fix build error

* edits

* WIP

* WIP

* WIP

* WIP

* add tocs

* edits

* formatting

* WIP

* WIP

* WIP

* WIP

* WIP

* edits

* review feedback

* update timestamps

* review feedback

* (DOCSP-40012): Add OCSF log examples (#8127)

* WIP

* WIP

* WIP

* WIP

* edits

* review feedback

* review feedback

* WIP

* (DOCSP-40012): Add OCSF log examples

* fix build error

* review feedback

* fix

* reset ocsf file

* update replacements

* edits

* (DOCSP-40061): Update release notes for OCSF logs (#8128)

* WIP

* fix build error

* edits

* WIP

* WIP

* WIP

* WIP

* add tocs

* edits

* formatting

* WIP

* WIP

* WIP

* WIP

* WIP

* edits

* review feedback

* update timestamps

* review feedback

* (DOCSP-40061): Update release notes for OCSF logs

* add links to examples

* wording

* feedback

* edit

--- a/snooty.toml
+++ b/snooty.toml
@@ -133,6 +133,7 @@ toc_landing_pages = [
    "/mongo",
    "/reference",
    "/reference/aggregation",
+   "/reference/audit-message",
    "/reference/bson-types",
    "/reference/change-events",
    "/reference/cluster-parameters",
@@ -353,6 +354,7 @@ kmip-kms-title = "KMIP-Compliant Key Provider"
 csfle-code-snippets-gen-keys = "https://github.com/mongodb/docs/tree/master/source/includes/quick-start/generate-master-key"
 libmongocrypt-version = "1.9"
 mongodb-crypt-version = "1.7.3"
+ocsf = ":abbr:`OCSF (Open Cybersecurity Schema Framework)`"
 sample-app-url-csfle = "https://github.com/mongodb-university/docs-in-use-encryption-examples/tree/main/csfle"
 sample-app-url-qe = "https://github.com/mongodb/docs/tree/master/source/includes/qe-tutorials"
 sample-app-url-qe-old = "https://github.com/mongodb-university/docs-in-use-encryption-examples/tree/main/queryable-encryption"
