DOCSP-39097 Updates language selectors to csharp instead of c# (#8090)
* Updates language selectors to csharp instead of c#

* Fix missed code-block instance

--- a/source/includes/extracts-filter.yaml
+++ b/source/includes/extracts-filter.yaml
@@ -141,7 +141,7 @@ content: |
             :csharp-api:`Eq
             <Overload_MongoDB_Driver_FilterDefinitionBuilder_1_Eq>` method:
  
-            .. code-block:: c#
+            .. code-block:: csharp
  
                Builders<BsonDocument>.Filter.Eq(<field>, <value>);
 ---
@@ -252,7 +252,7 @@ content: |
             <Overload_MongoDB_Driver_FilterDefinitionBuilder_1_Eq>`
             method, where ``<value>`` is the document to match:
 
-            .. code-block:: c#
+            .. code-block:: csharp
 
                Builders<BsonDocument>.Filter.Eq(<field>, <value>)
 
@@ -347,7 +347,7 @@ content: |
             where ``<value>`` is the exact array to match, including the
             order of the elements:
 
-            .. code-block:: c#
+            .. code-block:: csharp
 
                Builders<BsonDocument>.Filter.Eq(<field>, <value>)
 
@@ -438,7 +438,7 @@ content: |
             <Overload_MongoDB_Driver_FilterDefinitionBuilder_1_Eq>` method, 
             where ``<value>`` is the element value to match:
 
-            .. code-block:: c#
+            .. code-block:: csharp
 
                Builders<BsonDocument>.Filter.Eq(<field>, <value>)
 
@@ -599,7 +599,7 @@ content: |
             :csharp-api:`FilterDefinitionBuilder <T_MongoDB_Driver_FilterDefinitionBuilder_1>`
             methods to create a filter document. For example:
  
-            .. code-block:: c#
+            .. code-block:: csharp
  
                var builder = Builders<BsonDocument>.Filter;
                builder.And(builder.Eq(<field1>, <value1>), builder.Lt(<field2>, <value2>));
@@ -737,7 +737,7 @@ content: |
             use :ref:`query operators <query-selectors>` in the
             :ref:`query filter document <document-query-filter>`. For example:
  
-            .. code-block:: c#
+            .. code-block:: csharp
  
                var builder = Builders<BsonDocument>.Filter;
                builder.And(builder.Eq(<array field>, <value1>), builder.Lt(<array field>, <value2>));
