DOCSP-40837-block-update (#8173)
* DOCSP-40837-block-update

* DOCSP-40837-block-update

---------

Co-authored-by: jason-price-mongodb <jshfjghsdfgjsdjh@aolsdjfhkjsdhfkjsdf.com>

--- a/source/includes/steps-4.4-upgrade-sharded-cluster.yaml
+++ b/source/includes/steps-4.4-upgrade-sharded-cluster.yaml
@@ -289,8 +289,9 @@ content: |
    Setting :ref:`featureCompatibilityVersion (fCV) : "4.4" <set-fcv>`
    implicitly performs a :dbcommand:`replSetReconfig` on each shard to
    add the :rsconf:`term` field to the shard replica configuration
-   document and blocks until the new configuration propagates to a
-   majority of replica set members.
+   document.
+
+   .. include:: /includes/fCV-propagation.rst
 
    This command must perform writes to an internal system collection.
    If for any reason the command does not complete successfully, you
