DOCS-16799 verbiage to include remainingOperationTimeEstimatedSecs (#8411)

--- a/source/includes/steps-reshard-a-collection.yaml
+++ b/source/includes/steps-reshard-a-collection.yaml
@@ -173,7 +173,7 @@ content: |
    :dbcommand:`commitReshardCollection`, until shards have fully caught
    up.
 
-   For example, if the write unavailability duration estimate does not
+   For example, if ``remainingOperationTimeEstimatedSecs`` does not
    decrease, you can abort the resharding operation with the
    :dbcommand:`abortReshardCollection` command:
 
