DOCSP-40676-convert-uuids (#8367)
* DOCSP-40676-convert-to-uuid

* add docs for to.subtype

* add format field

* finish edits for convert

* edits

* add initial touuid page

* formatting

* WIP toUUID

* toUUID page

* update release notes

* remove toUUID from string operator list

* table widths

* change table heading

* wording

* review edits

* edits

* review feedback

* add default subtype

--- a/source/includes/extracts-agg-operators.yaml
+++ b/source/includes/extracts-agg-operators.yaml
@@ -782,7 +782,6 @@ content: |
 
         - Converts a string to uppercase. Accepts a single argument
           expression.
-
 ---
 ref: agg-operators-text
 content: |
@@ -944,6 +943,11 @@ content: |
       * - :expression:`$type`
 
         - Return the BSON data type of the field.
+
+      * - :expression:`$toUUID`
+
+        - Converts a string to a :abbr:`UUID (Universally unique
+          identifier)`.
 
 ---
 ref: agg-operators-accumulators-group
