DOCSP-40876 Clarify commitReshardCollection behavior (#8441)

--- a/source/includes/steps-reshard-a-collection.yaml
+++ b/source/includes/steps-reshard-a-collection.yaml
@@ -155,9 +155,10 @@ content: |
    issuing the :dbcommand:`commitReshardCollection` command. This is
    useful if the current time estimate to complete the resharding
    operation is an acceptable duration for your collection to block
-   writes. The :dbcommand:`commitReshardCollection` command blocks
-   writes early and forces the resharding operation to complete. The
-   command has the following syntax:
+   writes. The ``commitReshardCollection`` command blocks
+   writes for the duration of the critical section and forces the 
+   resharding operation to complete. The command has the following 
+   syntax:
 
    .. code-block:: javascript
 
