DOCSP-41502  primary shard language updates 2/2 (#8399)
* DOCSP-41502  primary shard language updates 2/2

* internal review

* reverts removeShard ref docs and removeShard tutorial to be addressed in DOCS-16774

* external review

* external review

* external review

* external review MP primary shard def

--- a/source/includes/extracts-mongos-operations.yaml
+++ b/source/includes/extracts-mongos-operations.yaml
@@ -5,6 +5,13 @@ content: |
    :dbcommand:`movePrimary`.
 
 ---
+ref: mongos-operations-wc-move-collection
+content: |
+   
+   :binary:`~bin.mongos` uses :writeconcern:`"majority"` write concern for
+   :dbcommand:`moveCollection`.
+
+---
 ref: mongos-operations-wc-drop
 content: |
 
