--- a/source/includes/steps-backup-without-journaling.yaml
+++ b/source/includes/steps-backup-without-journaling.yaml
@@ -13,12 +13,12 @@ title: "Perform the backup operation described in :ref:`lvm-backup-operation`."
 stepnum: 2
 ref: backup
 ---
-title: "After the snapshot completes, unlock the database."
+title: "After you create the snapshot, unlock the database."
 stepnum: 3
 ref: unlock
 pre: |
-  To unlock the database after the snapshot has completed, use the
-  following command in :binary:`~bin.mongosh`:
+  To unlock the database after you create the snapshot, 
+  use the following command in :binary:`~bin.mongosh`:
 action:
   language: javascript
   code: |
