--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,6 @@ name = "snooty-cache-plugin"
 # Production context: all deploys from the Production branch
 # set in your site’s Branches settings in the UI will inherit
 # these settings.
-[context.production]
+[build]
 publish = "snooty/public"
 command = ". ./build.sh"
