DOCSP-39652 time series bucketing (#8297)
* External review feedback

* Draft content, TOC title brevity

* Draft content

* TOC syntax

* Removed unused file

* Draft

* Bucket lifecycle content

* Further clarification on bucket states

* Fixed broken refs

* Fixed broken ref

* Stub for compressed buckets

* Formatting

* Moved some info around

* Apply suggestions from code review

Co-authored-by: Dan Larkin-York <13419935+dhly-etc@users.noreply.github.com>

* External review feedback and added relevant server parameters to descriptions

* Wording change for consistency

* Removed mentions of bucket compression

* Draft changes

* Moved over the Properties of Time Series Data section from the Querying PR, changed title and tags

* Trimmed bucket lifecycle information to remove mentions of bucket states beyond active or open

* Fixed TOC title

* Draft comments

* External review feedback

* External review feedback

* Added ref from index topic to bucketing topic

* Indentation

* Indentation

* Marked index page as drawer

---------

Co-authored-by: Dan Larkin-York <13419935+dhly-etc@users.noreply.github.com>

--- a/snooty.toml
+++ b/snooty.toml
@@ -112,6 +112,7 @@ toc_landing_pages = [
    "/core/sharding-shard-key",
    "/core/storage-engines",
    "/core/timeseries-collections",
+   "/core/timeseries/timeseries-index",
    "/core/timeseries-collections/timeseries-shard-collection",
    "/core/transactions",
    "/core/views",
