DOCSP-39927 tcmalloc Performance Requirements (#8152)
* DOCSP-39927 tcmalloc Performance Requirements

* *

* syntax

* build errors

* build errors

* *

* restructure

* one-pager updates

* platform support

* enable thp rhel

* fix includes

* *

* disable glibc text

* title fix

* JP feedback (1/2)

* JP feedback (2/2)

* fixes

* build error

* more build errors

* *

* add glossary terms for per-cpu and per-thread caches

* external feedback

* cat command updates

* BO feedback

* *

* *

--- a/snooty.toml
+++ b/snooty.toml
@@ -30,6 +30,7 @@ toc_landing_pages = [
    "/administration/replica-set-member-configuration",
    "/administration/sharded-cluster-administration",
    "/administration/sharded-cluster-config-servers",
+   "/administration/tcmalloc-performance",
    "/administration/upgrade-community-to-enterprise",
    "/aggregation",
    "/applications/indexes",
