--- a/source/includes/steps-disable-thp-in-initd.yaml
+++ b/source/includes/steps-disable-thp-in-initd.yaml
@@ -16,8 +16,8 @@ action:
          # X-Start-Before:    mongod mongodb-mms-automation-agent
          # Default-Start:     2 3 4 5
          # Default-Stop:      0 1 6
-         # Short-Description: Disable Linux transparent huge pages
-         # Description:       Disable Linux transparent huge pages, to improve
+         # Short-Description: Disable Linux Transparent Hugepages
+         # Description:       Disable Linux Transparent Hugepages, to improve
          #                    database performance.
          ### END INIT INFO
 
