--- a/source/includes/steps-disable-thp-in-systemd.yaml
+++ b/source/includes/steps-disable-thp-in-systemd.yaml
@@ -9,7 +9,7 @@ action:
     language: sh
     code: |
       [Unit]
-      Description=Disable Transparent Huge Pages (THP)
+      Description=Disable Transparent Hugepages (THP)
       DefaultDependencies=no
       After=sysinit.target local-fs.target
       Before=mongod.service
