DOCSP-41825-ldap-lookup-performance-impact (#8572)

--- a/source/includes/steps-configure-ldap-sasl-activedirectory-authentication.yaml
+++ b/source/includes/steps-configure-ldap-sasl-activedirectory-authentication.yaml
@@ -115,6 +115,12 @@ pre: |
      <https://msdn.microsoft.com/en-us/library/aa746475(v=vs.85).aspx>`_. This
      matching rule is an :abbr:`AD (Active Directory)` specific extension to
      LDAP search filters.
+
+     .. warning::
+     
+        If the :abbr:`AD (Active Directory)` forest contains a large number of
+        groups, the recursive ``member:1.2.840.113556.1.4.1941`` filter can lead
+        to significant performance degradation.
        
      .. code-block:: yaml
      
