DOCSP-40614-remove-windows-install-screenshots (#8717)
* DOCSP-40614-remove-windows-install-screenshots

* edit

--- a/source/includes/steps-install-mongodb-on-windows-interactive.yaml
+++ b/source/includes/steps-install-mongodb-on-windows-interactive.yaml
@@ -59,40 +59,30 @@ content: |
                 name: MongoDB Service
                 content: |
 
-                   The following installs and configures MongoDB as a Windows
-                   service.
-
                    You can configure and start MongoDB as a Windows service 
                    during the install, and the MongoDB service is started upon 
                    successful installation.
 
-                   .. figure:: /images/windows-installer.png
-                      :alt: Image of the MongoDB Installer wizard - Service Configuration.
-                      :figwidth: 496px
+                   - Select :guilabel:`Install MongoD as a Service`.
 
-
-                   - Select :guilabel:`Install MongoD as a Service` MongoDB as a service.
-
-                   - Select either:
+                   - Select one of these options:
 
                      - :guilabel:`Run the service as Network Service user` (Default)
 
                        This is a Windows user account that is built-in
-                       to Windows
-
-                       **or**
+                       to Windows.
 
                      - :guilabel:`Run the service as a local or domain user`
 
                        - For an existing local user account, specify a
-                         period (i.e. ``.``) for the :guilabel:`Account
+                         period (``.``) for the :guilabel:`Account
                          Domain` and specify the :guilabel:`Account Name` and
                          the :guilabel:`Account Password` for the user.
 
                        - For an existing domain user, specify the
-                         :guilabel:`Account Domain`, the
-                         :guilabel:`Account Name` and the
-                         :guilabel:`Account Password` for that user.
+                         :guilabel:`Account Domain`, :guilabel:`Account
+                         Name` and :guilabel:`Account Password` for that
+                         user.
 
                    - :guilabel:`Service Name`. Specify the service
                      name. Default name is ``MongoDB``. If you already
@@ -118,15 +108,8 @@ content: |
                 name: MongoDB
                 content: |
 
-                   The following installs MongoDB only and does not
-                   configure MongoDB as a Windows service.
-
                    If you choose not to configure MongoDB as a Windows service,
                    uncheck the :guilabel:`Install MongoD as a Service`.
-
-                   .. figure:: /images/windows-installer-install-only.png
-                      :alt: Image of the MongoDB Installer wizard. Not as a service.
-                      :figwidth: 498px
 
    #. :guilabel:`Install MongoDB Compass`
        *Optional*. To have the wizard install `MongoDB Compass
