DOCSP-42158-Add-changelog-release-notes-for-7.0.13-rc0 (#8845)
* DOCSP-42158-Add-changelog-release-notes-for-7.0.13-rc0

* Fixing bulleted list typo.

* Adding patch release changelog ref to 7.0 changelog

* Changing quotations to monospace formatting for changelog entries.

* Reverting backtick formatting as it was not source of build error.

* Wrapping text with asterisk in quotes to eliminate inline styling error.

* Changing quotations to backticks for monospace literal formatting. Should override the extra asterisk character.

--- a/config/changelog_conf.yaml
+++ b/config/changelog_conf.yaml
@@ -41,6 +41,11 @@ groups:
     - Not Applicable
     - dev-prod
     - Cache and Eviction
+    - Compaction
+    - Developer Productivity
+    - Transactions
+    - DHandles
+    - Cursors
   "MMAP":
     - MMAPv1
   "Storage":
