DOCS-15643-shard-key-and-arbiter (#8884)
* DOCS-15643-shard-key-and-arbiter

* DOCS-15643-shard-key-and-arbiter

* DOCS-15643-shard-key-and-arbiter

* DOCS-15643-shard-key-and-arbiter

* DOCS-15643-shard-key-and-arbiter

* DOCS-15643-shard-key-and-arbiter

* DOCS-15643-shard-key-and-arbiter

---------

Co-authored-by: jason-price-mongodb <jshfjghsdfgjsdjh@aolsdjfhkjsdhfkjsdf.com>

--- a/source/includes/extracts-transactions.yaml
+++ b/source/includes/extracts-transactions.yaml
@@ -446,6 +446,10 @@ content: |
 ref: transactions-arbiters
 content: |
 
+   You cannot change a :term:`shard key <shard key>` using a transaction
+   if the replica set has an arbiter. Arbiters cannot participate in the
+   data operations required for multi-shard transactions.
+
    Transactions whose write operations span multiple shards will error
    and abort if any transaction operation reads from or writes to a
    shard that contains an arbiter.
