DOCSP-40328 Fixes Debian 12 dependency (#8081)
* DOCSP-40328 Fixes Debian 12 dependency

* Fixes build issue

--- a/source/includes/extracts-install-mongodb-manually.yaml
+++ b/source/includes/extracts-install-mongodb-manually.yaml
@@ -26,7 +26,7 @@ ref: install-mongodb-enterprise-manually-debian-12
 content: |
   .. code-block:: bash
 
-     sudo apt-get install libcurl4 libgssapi-krb5-2 libldap-2.4-2 libwrap0 libsasl2-2 libsasl2-modules libsasl2-modules-gssapi-mit openssl liblzma5
+     sudo apt-get install libcurl4 libgssapi-krb5-2 libldap-common libwrap0 libsasl2-2 libsasl2-modules libsasl2-modules-gssapi-mit openssl liblzma5
 
 ---
 ref: install-mongodb-enterprise-manually-debian-11
@@ -51,7 +51,7 @@ ref: install-mongodb-community-manually-debian-12
 content: |
   .. code-block:: bash
 
-     sudo apt-get install libcurl4 libgssapi-krb5-2 libldap-2.4-2 libwrap0 libsasl2-2 libsasl2-modules libsasl2-modules-gssapi-mit openssl liblzma5
+     sudo apt-get install libcurl4 libgssapi-krb5-2 libldap-common libwrap0 libsasl2-2 libsasl2-modules libsasl2-modules-gssapi-mit openssl liblzma5
 
 ---
 ref: install-mongodb-community-manually-debian-11
