DOCSP-28624 Unnecessary Indexes Anti-pattern (#8075)
* DOCSP-28622 Unbounded Arrays Anti-pattern (#7849)

* DOCSP-28261 Schema Design Anti-patterns (concept page)  (#6078)

* DOCSP-28261 save changes

* DOCSP-28261 antipatterns

* DOCSP-28261 update learn more

* DOCSP-28261 jeff feedback

* DOCSP-28261 max feedback

* DOCSP-28261 add link

* DOCSP-28622 unbounded arrays

* DOCSP-28622 updates

* DOCSP-28622 internal feedback

* DOCSP-28622 internal feedback

* DOCSP-28622
Jeff feedback

* DOCSP-28622 missed update

* DOCSP-28622 corrections

* DOCSP-28622 feedback

* DOCSP-28622 Julia feedback

* DOCSP-28622 updates

* DOCSP-28622 updates

* DOCSP-28624 Unnecessary Indexes Anti-pattern

* DOCSP-28624 updates

* DOCSP-28624 updates

* DOCSP-28624 updates

* DOCSP-28624 updates

* DOCSP-28624 updates

* DOCSP-28624 feedback

* DOCSP-28624 rebase updates

* DOCSP-28624 rebase updates

--- a/snooty.toml
+++ b/snooty.toml
@@ -124,6 +124,7 @@ toc_landing_pages = [
    "/data-modeling",
    "/data-modeling/schema-design-process",
    "/data-modeling/data-consistency",
+   "/data-modeling/design-antipatterns",
    "/data-modeling/design-patterns",
    "/data-modeling/design-patterns/group-data",
    "/data-modeling/design-patterns/data-versioning",
