DOCSP-40143-query-shape-page (#8072)
* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape-page

* DOCSP-40143-query-shape

--- a/source/includes/extracts-4.2-changes.yaml
+++ b/source/includes/extracts-4.2-changes.yaml
@@ -128,8 +128,10 @@ content: |
    :ref:`diagnostic log messages (i.e. mongod/mongos logmessages) 
    <log-message-slow-ops>` for read/write operations include:
 
-   - ``queryHash`` to help identify slow queries with the same
-     :term:`query shape`. 
+   - ``planCacheShapeHash`` to help identify slow queries with the same
+     :term:`plan cache query shape`.
+     
+     .. include:: /includes/plan-cache-rename.rst
 
    - ``planCacheKey`` to provide more insight into the :doc:`query plan
      cache </core/query-plans>` for slow queries.
@@ -138,16 +140,19 @@ content: |
 ref: 4.2-changes-query-shapes
 content: |
 
-   To help identify slow queries with the same :term:`query shape`, each 
-   :term:`query shape` is associated with a queryHash. The ``queryHash`` is a
-   hexadecimal string that represents a hash of the query shape and
-   is dependent only on the query shape.
+   To help identify slow queries with the same :term:`plan cache query
+   shape`, each plan cache query shape is associated with a query hash.
+   The plan cache query shape hash is a hexadecimal string that
+   represents a hash of the query shape and is dependent only on the
+   query shape.
 
    .. note::
 
       As with any hash function, two different query shapes may result
       in the same hash value. However, the occurrence of hash
       collisions between different query shapes is unlikely.
+
+      .. include:: /includes/plan-cache-rename.rst
 
 ---
 ref: 4.2-changes-plan-cache-key
@@ -161,11 +166,13 @@ content: |
 
    .. note::
 
-      Unlike the ``queryHash``, the ``planCacheKey`` is a function of
+      Unlike ``planCacheShapeHash``, ``planCacheKey`` is a function of
       both the query shape and the currently available indexes for the
       shape. That is, if indexes that can support the query shape are
       added/dropped, the ``planCacheKey`` value may change whereas the
-      ``queryHash`` value would not change.
+      ``planCacheShapeHash`` value would not change.
+
+      .. include:: /includes/plan-cache-rename.rst
 
 ---
 ref: 4.2-changes-planCacheStats
