DOCSP-42272 ISOdate/optime Substitutions (#8951)
* DOCSP-42272 optime Substitutions

* Sub test

* Sub test

* Sub test

* Sub text for primary example

* Sub text for secondary example

* Updates sub text

* Updates sub text

* Updates sub text

* Updates sub text

* Updates sub text

* Updates sub text

* Updates comments on script

* Updates comments on script

* Fixes code issue

* Adds semicolon

--- a/snooty.toml
+++ b/snooty.toml
@@ -309,6 +309,11 @@ sbe-short-title = "Slot-Based Execution Engine"
 fcv = ":abbr:`fCV (feature compatibility version)`"
 fts = "Atlas Search"
 atlas = "MongoDB Atlas"
+
+# Timestamp Values (Run `node bin/getTime.js` to get more recent values
+timestamp = "Timestamp(1723763173, 1)"
+isodate = "ISODate(\"2024-08-15T23:06:13.978Z\")"
+
 # Automerger Constants
 auto-merge-upper = "AutoMerger"
 auto-merge-lower = "automerger"
