DOCSP-40354 Task: Move a Collection (#8641)
* DOCSP-40354 Task: Move a Collection

* internal review

* external review

* external review

* adds steps

* moves page under Data Partitioning...

* moves page under Data Partitioning...

* resharding operations -> moveCollection operations

* update agg pipeline

--- a/snooty.toml
+++ b/snooty.toml
@@ -77,6 +77,7 @@ toc_landing_pages = [
    "/core/journaling",
    "/core/kerberos",
    "/core/map-reduce",
+   "/core/moveable-collections",
    "/core/queryable-encryption/",
    "/core/queryable-encryption/about-qe-csfle",
    "/core/queryable-encryption/fundamentals/keys-key-vaults",
