DOCS-16774-use-moveCollection-for-remove-shard-tutorial (#8552)
* WIP

* fix broken ref

* edits

* formatting fix

* final first draft

* edit

* edit

* periods

* edit

* edit

* review feedback

* build errors

* indentation fix

* edit

* edit

* edits

* edits

* wording

* typo

* edits

* tweaks

* retry commit

* change movePrimary step

* review feedback

* Retry commit

* typo

* address review feedback

* tweaks

* WIP

* review feedback

* nit

* formatting

* edit

* edit

* edit

* edit

* edit

* minimalism

* finalize review edits

* edit

* tweak for csfle

* add note title

* edit

* review feedback

* minimalism

* review feedback

* cross-link to moveCollection docs

* add missing refs

--- a/source/includes/extracts-changestream.yaml
+++ b/source/includes/extracts-changestream.yaml
@@ -44,15 +44,15 @@ ref: changestream-remove-shard
 content: |
 
    If the deployment is a sharded cluster, a shard removal may cause an
-   open change stream cursor to close, and the closed change stream cursor may
-   not be fully resumable.
+   open change stream cursor to close. The closed change stream cursor
+   may not be fully resumable.
 
 ---
 ref: changestream-remove-shard-with-link
 content: |
 
-   A shard removal may cause an open :doc:`change stream cursor
-   </changeStreams>` to close, and the closed change stream cursor may
+   Removing a shard may cause an open :ref:`change stream cursor
+   <changeStreams>` to close, and the closed change stream cursor may
    not be fully resumable.
 
 ---
