Docsp 42667 typo ticket onboarding (#9224)
* DOCSP-42667-typo-ticket-onboarding

* empty

* empty

--- a/source/includes/steps-deploy-replica-set-with-auth.yaml
+++ b/source/includes/steps-deploy-replica-set-with-auth.yaml
@@ -190,7 +190,7 @@ action:
 post: |
 
   Enter the password when prompted.
-  See :ref:`database-user-roles` for a full list of built-in roles and
+  See :ref:`database-user-roles` for a full list of built-in roles 
   related to database administration operations.
 ---
 stepnum: 7
